# tetrapol-kit

./: .gitignore  CMakeLists.txt  README  TODO  run.sh
apps/: CMakeLists.txt  tetrapol_build.c  tetrapol_dump.c
demod/: bbb  calibrate  demod.py  demod2.py  map  scan  scan.sh  signal_detector.py  tetrapol_cli.py  tetrapol_detector.py  tetrapol_detector.sh  tetrapol_framing_err.py  tetrapol_rx.py  tetrapol_rx_cli.py  tetrapol_tx.grc
doc/: crypto.txt  voice.txt
lib/: CMakeLists.txt  addr.c  bch.c  bit_utils.c  cch.c  data_block.c  data_frame.c  frame.c  frame_json.c  hdlc_frame.c  link.c  lsdu_cd.c  lsdu_vch.c  misc.c  msg_coding.c  pch.c  phys_ch.c  rch.c  sdch.c  tch.c  terminal.c  test_data_block.c  test_frame.c  test_phys_ch.c  test_timer.c  test_tp_timer.c  tetrapol.c  timer.c  tp_timer.c  tpdu.c  tsdu.c  tsdu_json.c  tsdu_print.c
lib/tetrapol/: addr.h  bch.h  bit_utils.h  cch.h  data_block.h  data_frame.h  frame.h  frame_json.h  hdlc_frame.h  link.h  log.h  lsdu_cd.h  lsdu_vch.h  misc.h  msg_coding.h  pch.h  phys_ch.h  rch.h  sdch.h  tch.h  terminal.h  tetrapol.h  tetrapol_int.h  timer.h  tp_timer.h  tpdu.h  tsdu.h  tsdu_json.h  tsdu_print.h
misc/: calibrate  map
